Wrote a bit about QA, specifically about testing.

--- a/Reports/Final Report/Design.tex
+++ b/Reports/Final Report/Design.tex
@@ -56,7 +56,7 @@
 			location on the playing field, or discussing the best position for the
 			marker.
 			
-		\subsection{A remote player wants to rotate a mirror}
+		\subsection{A remote player wants to rotate a mirror} \label{ssec:remoterotatemirror}
 			Remote players, due to them not being physically co-located with the
 			local players, cannot move mirror markers, as that would require them
 			to meet up with the local players and to play with them. However, 
