Commiting this to take a small break for now.

--- a/Reports/Final Report/QualityAssurance.tex
+++ b/Reports/Final Report/QualityAssurance.tex
@@ -27,7 +27,13 @@
 	can be found using Google. Using Unity Test Tools, all unit tests in the
 	project are listed once one clicks on the subitem "Unit Test Runner".
 	The tests are listed in a new window, and one can run all unit tests by
-	clicking on the "Run All" button at the top. 
+	clicking on the "Run All" button at the top. The menu then shows what unit tests
+	have passed or failed, and clicking on a unit test shows what went wrong.
+	
+	Integration tests are not done via a formalized test procedure, but rather by
+	creating simple scenes and observing that the subjects of the test work
+	as they should when they are placed in an actual scene. It is also a lot
+	harder to run these tests in a standardized way most of the time. 
 		
 	\section{Code Style} \label{sec:codestyle}
 		...
