--- a/Reports/Final Report/FinalReport.tex
+++ b/Reports/Final Report/FinalReport.tex
@@ -38,4 +38,9 @@ mirrors to deflect the laser beam coming from the laser to the target.
 \input{ResearchReport/ProposedSolution.tex}
 \input{ResearchReport/Conclusion.tex}
 
+\chapter{Product plan} \label{app:productplan}
+\input{ProductPlan/GameConcept.tex}
+\input{ProductPlan/Approach.tex}
+\input{ProductPlan/Planning.tex}
+
 \end{document}
