In QA, discussed the IDE, as well as added a process table in the process part of Orientation.

--- a/Reports/Final Report/FinalReport.tex
+++ b/Reports/Final Report/FinalReport.tex
@@ -5,6 +5,7 @@
 \usepackage{cite}
 \usepackage{graphicx}
 \bibliographystyle{apalike}
+\pagenumbering{roman}
 
 % Title Page
 \title{Augmented Reality mirror game}
@@ -22,6 +23,7 @@ mirrors to deflect the laser beam coming from the laser to the target.
 % TODO: add description of the chapters.
 \end{abstract}
 \tableofcontents
+\listoffigures
 
 \input{Orientation.tex}
 \input{Design.tex}
