--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -1,5 +1,5 @@
 \chapter{Orientation} \label{cha:orientation}
-
+\pagenumbering{arabic}
   This chapter provides an overview of the orientation phase of the project.
   It shows an analysis of the project requirements, and the decisions that
   have been made during the project regarding choices of frameworks and
@@ -192,3 +192,16 @@
       OpenCV started. This decision was based on various technical challenges we 
       came across during development. The reason for this decision can be found 
       in the Implementation chapter (chapter \ref{cha:implementation}).
+      
+      \subsection{The process table} \label{ssec:processtable}
+      The following table gives a nice and short overview regarding what was done
+      every week.\\
+      \begin{tabular}{| c | c | c | c | c | c | c | c | c | c | c |}
+	      \hline
+	      Weeks & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\
+	      \hline
+	      Research & X & X & \space & \space & \space & \space & \space & \space & \space & \space \\
+	      \hline
+	      Final report & \space & \space & \space & X & X & \space & \space & \space & \space & \space \\
+	      \hline
+      \end{tabular}
