--- a/Reports/Final Report/QualityAssurance.tex
+++ b/Reports/Final Report/QualityAssurance.tex
@@ -1,13 +1,18 @@
 \chapter{Quality Assurance} \label{cha:qa}
 	This chapter explains and describes various quality assurance techniques 
 	that were used during the project, to allow us to deliver a product of 
-	good quality (regarding both code quality and gameplay quality).
+	good quality (regarding both code quality and gameplay quality). It also
+	talks a bit about Microsoft Visual Studio first, our IDE of choice for
+	this project, considering that some QA tools are not available for
+	MonoDevelop, the standard IDE packaged with Unity.
 	%TODO Explain how we did Quality Assurance during the project.
 	%     This includes a description of FxCop, StyleCop and SonarQube,
 	%     but also the use of UnityTestTools and other metrics.
 	%     Also include a reference to the SIG evaluation (the actual
 	%     evaluation could be an appendix).
-
+	\section{IDE used for programming} \label{sec:ide}
+	The IDE used for programming was Microsoft Visual Studio.
+	
 	\section{Testing} \label{sec:testing}
 	There are two main types of testing done during the project. These are
 	unit testing and integration testing. Unity has no native support for
