--- a/Reports/Final Report/Implementation.tex
+++ b/Reports/Final Report/Implementation.tex
@@ -8,6 +8,8 @@
 	% Sections are purely by example. This list might not be entirely correct or complete.
 	\section{AR Glasses} \label{sec:arglasses}
 		...
+		\subsection{SLAM localization} \label{ssec:slamloc}
+			...
 
 	\section{Marker Detection} \label{sec:markerdetection}
 		...
