Added part about use of StyleCop and FxCop as well as SonarQube.

--- a/Reports/Final Report/Design.tex
+++ b/Reports/Final Report/Design.tex
@@ -174,7 +174,7 @@
 			the target has been hit. The game will then proceed to the
 			next level. An image of the target is shown in figure 
 			\ref{fig:target}.
-			\begin{figure}[h]
+			\begin{figure}[!ht]
 				\centering
 				\includegraphics[scale = 0.4]{Target}
 				\caption{The target of the game. The gold columns around the inner crystal will open up and rotate once the target is hit, as described earlier. Also, the crystal will change color once the target hits it.}
@@ -188,7 +188,7 @@
 			All levels require at least one mirror to move or rotate
 			in order to hit the target. An image of a mirror in-game is shown
 			in \ref{fig:mirror}.
-			\begin{figure}[h]
+			\begin{figure}[!ht]
 				\centering
 				\includegraphics[scale = 0.3]{Mirror}
 				\caption{an image of a mirror in-game, with its reflective surfaces.
@@ -205,7 +205,7 @@
 			to create paths that the laser beam has to go through, later
 			levels use not only walls, but also other game objects. A wall
 			is shown in \ref{fig:wall}.
-			\begin{figure}[h]
+			\begin{figure}[!ht]
 				\centering
 				\includegraphics[scale = 0.15]{Wall}
 				\caption{an image of a wall in-game. It blocks lasers entirely.}
@@ -226,7 +226,7 @@
 			and later levels use this to create more complex puzzles.
 			What the emitter looks like exactly is shown in figure 
 			\ref{fig:emitter}.
-			\begin{figure}[h]
+			\begin{figure}[!ht]
 				\centering
 				\includegraphics[scale = 0.25]{Emitter}
 				\caption{what the emitter looks like in the game. Also shown here is a laser beam
@@ -239,7 +239,7 @@
 			to a new height. This then allows laser beams to pass over walls that 
 			stand on the ground. Therefore, elevators can function as a bridge over
 			walls. An elevator is depicted in \ref{fig:elevator}.
-			\begin{figure}[h!]
+			\begin{figure}[!ht]
 				\centering
 				\includegraphics[scale = 0.3]{Elevator}
 				\caption{an elevator in-game. Both the upper and lower plate have a
@@ -255,7 +255,7 @@
 			travel through a portal in order to be able to hit the target),
 			therefore forcing the players to redirect laser beams to portals.
 			A portal is depicted in \ref{fig:portal}
-			\begin{figure}[h!]
+			\begin{figure}[!ht]
 				\centering
 				\includegraphics[scale = 0.3]{Portal}
 				\caption{An in-game picture of the portal. It looks like a 
