--- a/Reports/Final Report/FinalReport.tex
+++ b/Reports/Final Report/FinalReport.tex
@@ -33,16 +33,20 @@ mirrors to deflect the laser beam coming from the laser to the target.
 
 \appendix
 
-% Research Report
 \chapter{Research Report} \label{app:researchreport}
 \input{ResearchReport/ProblemFormulation.tex}
 \input{ResearchReport/ProblemAnalysis.tex}
 \input{ResearchReport/ProposedSolution.tex}
 \input{ResearchReport/Conclusion.tex}
+\pagebreak
+\addcontentsline{toc}{section}{Bibliography}
+\bibliography{ResearchReport/Bibliography.bib}
 
 \chapter{Product plan} \label{app:productplan}
 \input{ProductPlan/GameConcept.tex}
 \input{ProductPlan/Approach.tex}
 \input{ProductPlan/Planning.tex}
+
+
 
 \end{document}
