--- a/Reports/Final Report/ResearchReport/Conclusion.tex
+++ b/Reports/Final Report/ResearchReport/Conclusion.tex
@@ -1,4 +1,4 @@
-\section{Conclusion} \label{cha:conclusion}
+\section{Conclusion} \label{cha:researchconclusion}
 In short, the mirror game seems the best solution to the problem. It is a viable
 project to create in the given time frame, it is a challenging puzzle game even
 when playing a different version of it (a single-player version) on your own,
@@ -16,9 +16,6 @@ library handling augmented reality for the local players. The remote players
 will likely be using an Oculus Rift and the local players one of the augmented
 reality devices describes in the problem analysis that ends up working best in
 practice.
-	% Summarizes the Research Report and provides
-	% an overview and conclusion of the technologies
-	% we're going to use.
 
 Using this information, we've built a small demo that uses Vuforia. It places
 a laser emitter, mirror and wall on three markers that can be moved around. The
