Added a short summary, on which I will further elaborate in the future.

--- a/Reports/Final Report/FinalReport.tex
+++ b/Reports/Final Report/FinalReport.tex
@@ -24,6 +24,7 @@ mirrors to deflect the laser beam coming from the laser to the target.
 \end{abstract}
 \tableofcontents
 \listoffigures
+\input{Summary.tex}
 
 \input{Orientation.tex}
 \input{Design.tex}
@@ -38,14 +39,15 @@ mirrors to deflect the laser beam coming from the laser to the target.
 \input{ResearchReport/ProblemAnalysis.tex}
 \input{ResearchReport/ProposedSolution.tex}
 \input{ResearchReport/Conclusion.tex}
-\pagebreak
-\addcontentsline{toc}{section}{Bibliography}
-\bibliography{ResearchReport/Bibliography.bib}
 
 \chapter{Product plan} \label{app:productplan}
 \input{ProductPlan/GameConcept.tex}
 \input{ProductPlan/Approach.tex}
 \input{ProductPlan/Planning.tex}
+
+\pagebreak
+\addcontentsline{toc}{chapter}{Bibliography}
+\bibliography{ResearchReport/Bibliography.bib}
 
 
 
