--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -3,7 +3,8 @@
   This chapter provides an overview of the orientation phase of the project.
   It shows an analysis of the project requirements, and the decisions that
   have been made during the project regarding choices of frameworks and
-  libraries as well as gameplay elements.
+  libraries as well as gameplay elements. It also functions as a thorough
+  introduction to this report.
 
   For a more in-depth view on the research that has been done leading to
   these decisions, please refer to the Research Report in appendix
