Fixed my Bibliography issues.

--- a/Reports/Final Report/Design.tex
+++ b/Reports/Final Report/Design.tex
@@ -280,7 +280,9 @@
 				\label{fig:portal}
 			\end{figure}
 		\subsection{Lens splitter} \label{ssec:splitter}
-		...
+			The lens splitter is another advanced game object. It splits incoming
+			laser beams into two, creating two separate laser beams that each go
+			a different way. 
 		\subsection{Planned game objects that didn't make it} \label{ssec:planned}
 			There were some ideas for game objects that did not make the
 			final cut. For example, there were plans to use AND- and OR-gates
