--- a/Reports/Final Report/FinalReport.tex
+++ b/Reports/Final Report/FinalReport.tex
@@ -47,8 +47,7 @@ mirrors to deflect the laser beam coming from the laser to the target.
 
 \pagebreak
 \addcontentsline{toc}{chapter}{Bibliography}
-\bibliography{ResearchReport/Bibliography.bib}
-
+\bibliography{Bibliography}
 
 
 \end{document}
