Captions fixed, the LoF looks a lot better now.

--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -86,13 +86,15 @@
 		easier to deal with various changes during the development process.
 		For a complete description of the rules that the Scrum methodology
 		describes, please refer to the Scrum guide, available at
-		\url{http://www.scrumguides.org/scrum-guide.html}.
+		\url{http://www.scrumguides.org/scrum-guide.html}. The methodology
+		in graph form can be seen in \ref{fig:scrum}. The methodology
+		shown is nearly identical to the methodology we use, the only 
+		exception being that our sprints only last one week instead of two.
 		\begin{figure}
 			\centering
 			\includegraphics[width=\textwidth]{Scrum}
-			\caption{A graphical display of the Scrum methodology of software development. 
-			         The methodology shown here is nearly identical to the methodology we use, 
-			         the only exception being that our sprints only last one week instead of two.}
+			\caption{Scrum.}
+			\label{fig:scrum}
 		\end{figure}
 
     \subsection{Organization} \label{ssec:organization}
