Use cases added to the report.

--- a/Reports/Final Report/Design.tex
+++ b/Reports/Final Report/Design.tex
@@ -73,7 +73,24 @@
 			able to see this recolor). Also, a selected mirror can be rotated by
 			using the "A" key (for rotation to the left, relative to the surface
 			normal of the mirror) or the "D" key (for rotation to the right).
-			
+		
+		\subsection{Use case diagrams} \label{ssec:usecasediagrams}
+			To illustrate the given main activities, two use case diagrams are
+			displayed here. The use cases for the remote player are depicted in
+			\ref{fig:remoteusecase}, while the use cases for the local player
+			are depicted in \ref{fig:localusecase}.
+			\begin{figure}[!ht]
+				\centering
+				\includegraphics[scale = 0.4]{RemotePlayerUseCase}
+				\caption{The use cases for the remote player.}
+				\label{fig:remoteusecase}
+			\end{figure}
+			\begin{figure}[!ht]
+				\centering
+				\includegraphics[scale = 0.4]{LocalPlayerUseCase}
+				\caption{The use cases for the local player.}
+				\label{fig:localusecase}
+			\end{figure}
 		% TODO add some use case diagrams?
 
 	\section{Back-end design} \label{sec:backenddesign}
