Updated the process a little bit.

--- a/Reports/Final Report/Orientation.tex
+++ b/Reports/Final Report/Orientation.tex
@@ -196,15 +196,32 @@
       came across during development. The reason for this decision can be found 
       in the Implementation chapter (chapter \ref{cha:implementation}).
       
+      \subsection{Restructuring the entire project}
+      Week 6 began with a massive restructuring of the project. Right before
+      the code was to be handed in to SIG, Unity failed to build the project
+      completely. There were no errors in the scripts, but errors in the build
+      came directly from the compiler. This caused us to move everything that
+      we wanted to move from the original project to the new project.
+      
       \subsection{The process table} \label{ssec:processtable}
       The following table gives a nice and short overview regarding what was done
       every week.\\
-      \begin{tabular}{| c | c | c | c | c | c | c | c | c | c | c |}
-	      \hline
-	      Weeks & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\
-	      \hline
-	      Research & X & X & \space & \space & \space & \space & \space & \space & \space & \space \\
-	      \hline
-	      Final report & \space & \space & \space & X & X & \space & \space & \space & \space & \space \\
-	      \hline
-      \end{tabular}
+      \begin{table}[!ht]
+	      \begin{tabular}{| c | c | c | c | c | c | c | c | c | c | c |}
+	      	      \hline
+	      	      Weeks & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 \\
+	      	      \hline
+	      	      Research & X & X & \space & \space & \space & \space & \space & \space & \space & \space \\
+	      	      \hline
+	      	      Final report & \space & \space & \space & X & X & X & \space & \space & \space & \space \\
+	      	      \hline
+	      	      Networking & X & X & \space & \space & X & X & \space & \space & \space & \space \\
+	      	      \hline
+	      	      Augmented reality & \space & \space & \space & X & X & X & \space & \space & \space & \space \\
+	      	      \hline
+	      	      Gameplay & X & X & X & X & \space & \space & \space & \space & \space & \space \\
+	      	      \hline
+	      	      Testing & \space & \space & X & X & X & X & \space & \space & \space & \space \\
+	      	      \hline
+	      \end{tabular}
+      \end{table}
