--- a/Reports/Final Report/QualityAssurance.tex
+++ b/Reports/Final Report/QualityAssurance.tex
@@ -10,7 +10,9 @@
 		The IDE used for programming was Microsoft Visual Studio. Unity has an IDE
 		of its own available for programming in C\#, which is called MonoDevelop.
 		However, the MonoDevelop IDE is really lacking in functionality. It has no
-		support for the plugins that we use to check our code. 
+		support for the plugins that we use to check our code. Furthermore, the use
+		of MonoDevelop enforces a code style that is incompatible with the style 
+		guidelines used by StyleCop (see \ref{sec:codestyle}), 
 	
 	\section{Testing} \label{sec:testing}
 		There are two main types of testing done during the project. These are
@@ -25,22 +27,26 @@
 		down menu with different options, the most important one being the unit test
 		runner.
 		
-		Unit tests are written using the NUnit unit testing framework for C\#. NUnit
-		is a test framework which was ported from the Java test framework JUnit, and
-		was created to bring xUnit testing to all .NET languages. Using this framework
-		is also really easy, and a tutorial on how to write unit tests using NUnit
-		can be found using Google. Using Unity Test Tools, all unit tests in the
-		project are listed once one clicks on the subitem "Unit Test Runner".
-		The tests are listed in a new window, and one can run all unit tests by
-		clicking on the "Run All" button at the top. The menu then shows what unit tests
-		have passed or failed, and clicking on a unit test shows what went wrong.
+		\subsection{Unit Tests} \label{ssec:unittests)}
+			Unit tests are written using the NUnit unit testing framework for 
+			C\#. NUnit is a test framework which was ported from the Java test 
+			framework JUnit, and was created to bring xUnit testing to all .NET 
+			languages. Using this framework is also really easy, and a tutorial 
+			on how to write unit tests using NUnit can be found using Google. 
+			Using Unity Test Tools, all unit tests in the project are listed 
+			once one clicks on the subitem "Unit Test Runner". The tests are 
+			listed in a new window, and one can run all unit tests by clicking 
+			on the "Run All" button at the top. The menu then shows what unit 
+			tests have passed or failed, and clicking on a unit test shows what 
+			went wrong.
 		
-		Integration tests are not done via a formalized test procedure, but rather by
-		creating simple scenes and observing that the subjects of the test work
-		as they should when they are placed in an actual scene. It is also a lot
-		harder to run these tests in a standardized way most of the time. 
-	
-		%TODO Add more subsections or remove this single subsection.
+		\subsection{Integration Tests} \label{ssec:integrationtests}
+			Integration tests are not done via a formalized test procedure, but 
+			rather by creating simple scenes and observing that the subjects of 
+			the test work as they should when they are placed in an actual 
+			scene. It is also a lot harder to run these tests in a standardized 
+			way most of the time. 
+		
 		\subsection{Code coverage} \label{ssec:codecoverage}
 			Code coverage is a metric that can be used to determine how thorough
 			the written code has been tested. There are several free software
